--- a/网站主机.md
+++ b/网站主机.md
@@ -1,1 +1,54 @@
+如果希望向全世界发布自己的网站，那么网站就需要被放置于一个 WEB 服务器。
 
+
+### 什么是万维网（ World Wide Web）？
+1. Web是一个遍布全球的计算机网络。
+2. 网络中的所有计算机均可彼此相互通信。
+3. 所有的计算机都使用被称为 HTTP 的通信标准。
+
+
+
+### WWW 如何工作？
+1. Web 信息存储于被称为网页的文档中。
+2. 网页是存储于名为 web 服务器的计算机中的文件。
+3. 读取网页的计算机可称为 web 客户机。
+4. web 客户机通过名为 web 浏览器的程序来查看页面。
+5. 主流的浏览器有 Internet Explorer 和 Firefox。
+
+
+
+### 浏览器如何读取网页？
+1. 浏览器可以通过一个请求 (request) 从 web 服务器读取页面。
+2. 请求是包含页面地址的标准 HTTP 请求。
+3. 网页地址实例: http://www.w3cschool.cc/
+
+
+
+### 浏览器如何显示网页？
+1. 所有的网页都含有供显示的指令。
+2. 浏览器通过读取这些指令来显示页面。
+3. 最常用的显示指令是 HTML 标签。
+4. HTML 标签格式：<p>这是一个段落。</p>.
+5. 如果你想学习更多关于HTML的知识请访问我们的 HTML 教程.
+
+
+
+### 什么是 Web 服务器？
+1. 您的所有网页的集合被称为网站。
+2. 要想让别人看到您的页面，就必须对网站进行发布。
+3. 您必须把网站拷贝到一台 web 服务器，才能完成对网站的发布。
+4. 如果您的 PC 连入网络的话，您也可以把它当作一台 web 服务器。
+5. 大多数的情况是使用由 ISP 提供的 web 主机。
+6. 什么是 ISP( Internet Service Provider )?
+7. ISP 指的是 Internet 服务提供商。
+8. ISP 可提供 Internet 服务。
+9. 最常见的 Internet 服务是网站主机。
+10. 网站主机服务可把您的网站存放到一个公共的服务器上。
+11. 网站主机服务通常包括了域名注册服务。
+
+
+
+### 总结
+1. 如果您希望其它人看到您的网站，就必须把网站拷贝到一个公共的服务器。即使您可以使用自己的 PC 来做 web 服务器，最常见的做法还是通过 ISP 来存放网站。
+2. 包含在 web 主机解决方案中的还有域名注册和标准的电子邮件服务。
+3. 您可以在接下来的章节阅读到更多有关域名注册、电子邮件和其他服务的内容。
