--- a/网站主机.md
+++ b/网站主机.md
@@ -1,3 +1,17 @@
+服务器端脚本  可供学习的选择：ASP、PHP、JSP（java）、
+
+
+
+### 网站数据库
+1. MS SQL Server 或者 Oracle 用于高流量的数据库驱动型网站。
+2. MySQL用于低成本的数据库访问。
+3. MS Access 用于低流量的网站。
+
+
+
+
+
+
 如果希望向全世界发布自己的网站，那么网站就需要被放置于一个 WEB 服务器。
 
 
